--- a/scaffold/app/views/layouts/application.html.slim
+++ b/scaffold/app/views/layouts/application.html.slim
@@ -1,5 +1,5 @@
 doctype html
-html
+html ng-app='app'
   head
     title
       = title || 'TODO: Change me with default title'
@@ -8,4 +8,7 @@ html
     = csrf_meta_tags
   
   body
+    header.md-whiteframe-3dp
+      = render 'shared/header'
+
     = yield
