--- a/scaffold/app/views/devise/confirmations/new.html.slim
+++ b/scaffold/app/views/devise/confirmations/new.html.slim
@@ -1,11 +1,7 @@
-h2
-  | Resend confirmation instructions
-= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :email
-    br
-    = f.email_field :email, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email)
-  .actions
-    = f.submit "Resend confirmation instructions"
+h2 Resend confirmation instructions
+
+= semantic_form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f|
+  = f.input :email, input_html: { autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) }
+  = f.actions :submit, label: "Resend confirmation instructions"
+
 = render "devise/shared/links"
