--- a/scaffold/app/views/devise/passwords/edit.html.slim
+++ b/scaffold/app/views/devise/passwords/edit.html.slim
@@ -1,22 +1,11 @@
-h2
-  | Change your password
-= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
-  = devise_error_messages!
-  = f.hidden_field :reset_password_token
-  .field
-    = f.label :password, "New password"
-    br
-    - if @minimum_password_length
-      em
-        | (
-        = @minimum_password_length
-        |  characters minimum)
-      br
-    = f.password_field :password, autofocus: true, autocomplete: "off"
-  .field
-    = f.label :password_confirmation, "Confirm new password"
-    br
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .actions
-    = f.submit "Change my password"
+h2 Change your password
+
+= semantic_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
+  = f.input :reset_password_token, as: :hidden
+  
+  = f.input :password, label: "New password#{@minimum_password_length ? " (#{@minimum_password_length characters minimum})"}", input_html: { autofocus: true, autocomplete: 'off' }
+  = f.input :password_confirmation, label: 'Confirm new password'
+  
+  = f.action :submit, label: 'Change password'
+
 = render "devise/shared/links"
