--- a/scaffold/app/views/devise/passwords/new.html.slim
+++ b/scaffold/app/views/devise/passwords/new.html.slim
@@ -1,11 +1,9 @@
-h2
-  | Forgot your password?
-= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :email
-    br
-    = f.email_field :email, autofocus: true
-  .actions
-    = f.submit "Send me reset password instructions"
+h2 Forgot your password?
+
+= semantic_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
+
+  = f.input :email, input_html: { autofocus: true }
+  
+  = f.action :submit, label: 'Send reset instructions'
+
 = render "devise/shared/links"
