convert resend unlock to formtastic

--- a/scaffold/app/views/devise/unlocks/new.html.slim
+++ b/scaffold/app/views/devise/unlocks/new.html.slim
@@ -1,11 +1,9 @@
-h2
-  | Resend unlock instructions
-= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :email
-    br
-    = f.email_field :email, autofocus: true
-  .actions
-    = f.submit "Resend unlock instructions"
+h2 Resend unlock instructions
+
+= semantic_form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f|
+
+  = f.input :email, input_html: { autofocus: true }
+
+  = f.action :submit, label: 'Resend instructions'
+
 = render "devise/shared/links"
