--- a/scaffold/app/views/layouts/application.html.slim
+++ b/scaffold/app/views/layouts/application.html.slim
@@ -1,14 +1,5 @@
-doctype html
-html ng-app='app'
-  head
-    title
-      = title || 'TODO: Change me with default title'
-    = stylesheet_link_tag 'application', media: 'all'
-    = javascript_include_tag 'application'
-    = csrf_meta_tags
-  
-  body
-    header.md-whiteframe-3dp
-      = render 'shared/header'
+= render 'shared/header'
 
-    = yield
+= yield
+
+= parent_layout 'base'
