--- a/scaffold/app/views/shared/_header.html.slim
+++ b/scaffold/app/views/shared/_header.html.slim
@@ -1,2 +1,3 @@
-div layout='row' layout-align='end center'
-  md-button href=new_user_session_path Login
+header.md-whiteframe-3dp
+  div layout='row' layout-align='end center'
+    md-button href=new_user_session_path Login
