--- a/scaffold/app/views/layouts/base.html.slim
+++ b/scaffold/app/views/layouts/base.html.slim
@@ -2,7 +2,10 @@ doctype html
 html ng-app='app'
   head
     title
-      = title || 'TODO: Change me with default title'
+      = yield(:title) + ' | ' if content_for?(:title)
+      | TODO: Change me with default title
+
+    meta name='viewport' content='width=device-width, initial-scale=1'
     = stylesheet_link_tag 'application', media: 'all'
     = javascript_include_tag 'application'
     = csrf_meta_tags
