fix mobile devise layout

--- a/scaffold/app/views/layouts/devise.html.slim
+++ b/scaffold/app/views/layouts/devise.html.slim
@@ -1,5 +1,5 @@
 div layout='row'
-  .md-whiteframe-1dp.md-padding flex='100' flex-gt-md='33' flex-offset-gt-md='33'
+  .md-whiteframe-1dp.md-padding.md-margin flex=true flex-gt-md='33' flex-offset-gt-md='33'
     = yield
 
 = parent_layout 'application'
