--- a/scaffold/app/views/layouts/base.html.slim
+++ b/scaffold/app/views/layouts/base.html.slim
@@ -1,5 +1,5 @@
 doctype html
-html ng-app='app'
+html ng-app='app' ng-cloak=true
   head
     title
       = yield(:title) + ' | ' if content_for?(:title)
