--- a/scaffold/app/views/devise/confirmations/new.html.slim
+++ b/scaffold/app/views/devise/confirmations/new.html.slim
@@ -2,6 +2,6 @@ h2 Resend confirmation instructions
 
 = semantic_form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f|
   = f.input :email, input_html: { autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) }
-  = f.actions :submit, label: "Resend confirmation instructions"
+  = f.action :submit, label: "Resend confirmation instructions", primary: true
 
 = render "devise/shared/links"
