--- a/scaffold/app/views/devise/passwords/new.html.slim
+++ b/scaffold/app/views/devise/passwords/new.html.slim
@@ -4,6 +4,6 @@ h2 Forgot your password?
 
   = f.input :email, input_html: { autofocus: true }
   
-  = f.action :submit, label: 'Send reset instructions'
+  = f.action :submit, label: 'Send reset instructions', primary: true
 
 = render "devise/shared/links"
