--- a/scaffold/app/views/devise/shared/_links.html.slim
+++ b/scaffold/app/views/devise/shared/_links.html.slim
@@ -5,15 +5,15 @@
   md-button href=new_registration_path(resource_name) Sign up
 
 - if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' 
-  md-button href=new_password_path(resource_name) Forgot your password?
+  md-button href=new_password_path(resource_name) Forgot password?
 
 - if devise_mapping.confirmable? && controller_name != 'confirmations' 
   md-button href=new_confirmation_path(resource_name) 
-    | Didn't receive confirmation instructions?
+    | Didn't receive instructions?
 
 - if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' 
   md-button href=new_unlock_path(resource_name) 
-    | Didn't receive unlock instructions?
+    | Didn't receive instructions?
 
 - if devise_mapping.omniauthable? 
   - resource_class.omniauth_providers.each do |provider| 
